fixed double rendering issue and overflow

--- a/src/notes/FillPlaceholder.css
+++ b/src/notes/FillPlaceholder.css
@@ -37,23 +37,13 @@
     border-radius: 3px;
 }
 
-.date-selection-calendar {
-    position: absolute;
-    top: 50px;
-    left: 150px;
-}
-
-.test-styling-on-date {
+.calendar-picker-container {
     position: relative;
-    width: 100%;
-    height: 100%;
-
 }
 
-.expanded-styling > * {
+.calendar-picker-container > * {
+    z-index: 999;
+}
+.expanded-style > * {
     overflow: visible !important;
 }
-
-/* .MuiCollapse-container-294 {
-    overflow: visible;
-} */
